--- a/src/app/private-inner-project/private-inner-project.component.html
+++ b/src/app/private-inner-project/private-inner-project.component.html
@@ -50,6 +50,16 @@
                 <h4>{{ collaborator.displayName || 'Anonymous' }}</h4>
                 <ion-chip color="success">{{ 'PROJECT.COLLABORATOR' | translate }}</ion-chip>
               </div>
+              @if (isOwner()) {
+                <ion-button 
+                  fill="clear" 
+                  size="small" 
+                  color="danger"
+                  (click)="removeCollaborator(collaborator.uid)"
+                  class="remove-button">
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
+              }
             </div>
           }
         </ion-card-content>
