--- a/src/app/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/components/theme-toggle/theme-toggle.component.scss
@@ -1,3 +1,4 @@
+/* Custom styles that cannot be replaced with Ionic utilities */
 ion-button {
   --color: var(--ion-color-primary);
   --color-hover: var(--ion-color-primary-shade);
