--- a/src/app/my-profile/my-profile.component.scss
+++ b/src/app/my-profile/my-profile.component.scss
@@ -1,7 +1,4 @@
-ion-content {
-  padding: 8px;
-}
-
+/* Custom styles that cannot be replaced with Ionic utilities */
 .profile-form-card {
   margin: 0 0 16px 0;
   
