--- a/src/app/new-item/new-item.component.html
+++ b/src/app/new-item/new-item.component.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   @if (isAuthenticated()) {
     <form class="new-item-form">
       <ion-card class="form-card">
