--- a/src/app/no-connection/no-connection.component.scss
+++ b/src/app/no-connection/no-connection.component.scss
@@ -1,3 +1,4 @@
+/* Custom styles that cannot be replaced with Ionic utilities */
 .no-connection-container {
   display: flex;
   flex-direction: column;
