--- a/src/app/components/language-selector/language-selector.component.scss
+++ b/src/app/components/language-selector/language-selector.component.scss
@@ -1,3 +1,4 @@
+/* Custom styles that cannot be replaced with Ionic utilities */
 .setting-item {
   --padding-start: 20px;
   --padding-end: 20px;
@@ -21,8 +22,6 @@
     font-size: 12px;
     font-weight: 500;
   }
-  
-
 }
 
 .hidden-select {
