--- a/src/app/components/settings-button/settings-button.component.scss
+++ b/src/app/components/settings-button/settings-button.component.scss
@@ -1,3 +1,4 @@
+/* Custom styles that cannot be replaced with Ionic utilities */
 .custom-settings-button {
   --color: var(--button-color) !important;
   --color-hover: var(--ion-color-primary) !important;
