--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,4 @@
+/* Custom styles that cannot be replaced with Ionic utilities */
 ion-content { --background: var(--app-background); }
 
 .projects-container {
@@ -151,7 +152,6 @@ ion-content { --background: var(--app-background); }
         }
       }
     }
-
   }
 
   .project-footer {
