--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -40,6 +40,11 @@ ion-content { --background: var(--app-background); }
           font-size: 24px;
           color: var(--app-text);
           opacity: 0.6;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 90%;
         }
       }
 
@@ -228,6 +233,11 @@ ion-content { --background: var(--app-background); }
               font-size: 20px;
               color: var(--app-text);
               opacity: 0.6;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 100%;
+              height: 100%;
             }
           }
 
