--- a/src/app/my-profile/my-profile.component.scss
+++ b/src/app/my-profile/my-profile.component.scss
@@ -23,6 +23,11 @@
       ion-icon {
         font-size: 48px;
         color: var(--ion-color-medium);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 90%;
       }
     }
     
