--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -82,6 +82,19 @@
     gap: 1rem;
     flex: 1;
 
+    ion-avatar {
+      ion-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        font-size: 24px;
+        color: var(--app-text);
+        opacity: 0.6;
+      }
+    }
+
     .request-details {
       h4 {
         margin: 0 0 0.25rem 0;
