--- a/src/app/public-inner-project/public-inner-project.component.scss
+++ b/src/app/public-inner-project/public-inner-project.component.scss
@@ -67,6 +67,11 @@ ion-header {
           font-size: 24px;
           color: var(--app-text);
           opacity: 0.6;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 90%;
         }
       }
 
