--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -195,6 +195,16 @@
           </ion-button>
         </div>
       }
+
+      <!-- Show pending request status for users who have already requested -->
+      @if (!isProjectCreator(project()) && hasCollaborationRequest(project())) {
+        <div class="pending-request-section">
+          <div class="pending-request-message">
+            <ion-icon name="time-outline" color="warning"></ion-icon>
+            <span>{{ 'HOME.COLLABORATION_REQUEST_PENDING' | translate }}</span>
+          </div>
+        </div>
+      }
     </div>
   }
 </ion-card>
